--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -68,7 +68,9 @@ layout: default
         {% endif %}
         {% include page__taxonomy.html %}
       </footer>
-
+{% comment %}
+  {% if page.share %}{% include social-share.html %}{% endif %}
+{% endcomment %}
       {% include post_pagination.html %}
     </div>
 
